// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBox snapshot 1`] = `
<div>
  <div
    class="relative h-full"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="h-full"
      data-state="closed"
      type="button"
    >
      <div
        class="flex h-full cursor-pointer items-center gap-3 px-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="inline-block "
            height="16"
            width="16"
          />
          <p
            class="font-12-regular"
          >
            test@test.com
          </p>
        </div>
      </div>
    </button>
  </div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`UserBox snapshot when open 1`] = `
<div>
  <div
    class="relative h-full"
  >
    <button
      aria-controls=":r4:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="h-full"
      data-floating-ui-inert=""
      data-state="open"
      type="button"
    >
      <div
        class="flex h-full cursor-pointer items-center gap-3 px-3 bg-fill-quaternary"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="inline-block "
            height="16"
            width="16"
          />
          <p
            class="font-12-regular"
          >
            test@test.com
          </p>
        </div>
      </div>
    </button>
    <div
      class="bg-primary border-fill-secondary rounded border shadow-sm w-full"
      id=":r4:"
      role="dialog"
      style="position: absolute; left: 0px; top: 0px; z-index: 50; transform: translate(6px, 6px);"
      tabindex="-1"
    >
      <ul>
        <li
          class="hover:bg-fill-quaternary cursor-pointer p-3 hover:cursor-pointer"
        >
          header.profile
        </li>
        <li
          class="hover:bg-fill-quaternary cursor-pointer p-3 hover:cursor-pointer"
        >
          header.sign-out
        </li>
      </ul>
    </div>
  </div>
  <div
    data-floating-ui-inert=""
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;
